# vlc-activex

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac
activex/: Makefile.am  axvlc.idl  axvlc.tlb  axvlc_idl.c  axvlc_idl.h  connectioncontainer.cpp  connectioncontainer.h  dataobject.cpp  main.cpp  objectsafety.cpp  objectsafety.h  olecontrol.cpp  oleinplaceactiveobject.cpp  oleinplaceactiveobject.h  oleinplaceobject.cpp  oleobject.cpp  oleobject.h  persistpropbag.cpp  persiststorage.cpp  persiststreaminit.cpp  plugin.cpp  plugin.h  provideclassinfo.cpp  viewobject.cpp  viewobject.h  vlccontrol.cpp  vlccontrol2.cpp  vlccontrol2.h
common/: Makefile.am  aes.cpp  firmware.h  metadata.cpp  metadata.h  msg.h  msgserver.h  position.h  serial.cpp  serial.h  socketmsg.cpp  vlc_player.cpp  vlc_player.h  vlc_player_options.h  win32_fullscreen.cpp  win32_fullscreen.h  win32_vlcwnd.cpp  win32_vlcwnd.h
extras/macosx/: Info.plist.in  build-package.sh  build-plugin.sh  build-vlc.sh  create-dmg.sh  create-universal-binary.sh  dmg_setup.scpt
npapi/: .gitignore  Makefile.am  common.h  events.cpp  events.h  locking.h  vlcplugin.h  vlcplugin_base.cpp  vlcplugin_base.h  vlcplugin_gtk.cpp  vlcplugin_gtk.h  vlcplugin_mac.h  vlcplugin_mac.mm  vlcplugin_win.cpp  vlcplugin_win.h  vlcplugin_xcb.cpp  vlcplugin_xcb.h  vlcshell.cpp  vlcshell.h  vlcwindowless_base.cpp  vlcwindowless_base.h  vlcwindowless_mac.cpp  vlcwindowless_mac.h  vlcwindowless_win.cpp  vlcwindowless_win.h  vlcwindowless_xcb.cpp  vlcwindowless_xcb.h
npapi/npcontrol/: npcommon.cpp  npmac.cpp  npunix.cpp  npwin.cpp
npapi/npruntime/: npolibvlc.cpp  npolibvlc.h  nporuntime.cpp  nporuntime.h
npapi/package/: install.rdf.in  npvlc_rc.rc.in  vlc.r.in
share/: Makefile.am
share/test/: resize.html  simple.html  windowless.html
share/test/VLCcontrols/: advanced.html  example.html  example2.html  example3.html  example4.html  example5.html
