dist_pkgdata_DATA = \
	pixmaps/x11/fullscreen.xpm \
	pixmaps/x11/pause.xpm \
	pixmaps/x11/play.xpm \
	pixmaps/x11/skip_next.xpm \
	pixmaps/x11/skip_previous.xpm \
	pixmaps/x11/stop.xpm \
	pixmaps/x11/time_icon.xpm \
	pixmaps/x11/time_line.xpm \
	pixmaps/x11/volume_knob.xpm \
	pixmaps/x11/volume_max.xpm \
	pixmaps/x11/volume_mute.xpm \
	pixmaps/x11/volume_slider_bar.xpm \
	pixmaps/win32/volume-muted.bmp \
	pixmaps/win32/defullscreen.bmp \
	pixmaps/win32/pause.bmp \
	pixmaps/win32/play.bmp \
	pixmaps/win32/volume.bmp

EXTRA_DIST = \
	pixmaps/macosx/enter-fullscreen.png \
	pixmaps/macosx/Knob.png \
	pixmaps/macosx/leave-fullscreen.png \
	pixmaps/macosx/Pause.png \
	pixmaps/macosx/Play.png \
	pixmaps/macosx/SliderTrackCenter.png \
	pixmaps/macosx/SliderTrackLeft.png \
	pixmaps/macosx/SliderTrackRight.png \
	pixmaps/win32/vlc.ico \
	pixmaps/win32/fullscreen.bmp \
	pixmaps/win32/defullscreen.bmp \
	pixmaps/win32/play.bmp \
	pixmaps/win32/pause.bmp \
	pixmaps/win32/volume.bmp \
	pixmaps/win32/volume-muted.bmp \
	test/test.html \
	test/windowless.html \
	test/resize.html
